# fgogachacnt

./: README.md  ce_bl.txt  csv2report.py  fgogachacnt.py  fp_12ce_bl.txt  fp_34srv_wl.txt  fp_3ce_wl.txt  gui.py  hash_ccode.csv  hash_ce.csv  hash_ce_center.csv  hash_srv.csv  makecard.py  makerarity.py  pyproject.toml  requirements.txt  rungui.bat  srv_bl.csv  update.py
.github/workflows/: gui_archive.yml
data/cardimgs/: poslist.txt
gui/: setup.bash  setup.bat  setup.ps1
